# openwrt-pybuilder

./: .editorconfig  .gitignore  .readthedocs.yml  MANIFEST.in  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
abc/: README.rst
docs/: conf.py  index.rst  requirements.txt
docs/api/: dns_aliyun.rst
docs2/: conf.py
docs2/_build/doctrees/: environment.pickle  index.doctree
docs2/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs2/_build/html/_sources/: index.rst.txt
openwrt_pybuilder/: imagebuilder.py  tool.py  tool.sh
openwrt_pybuilder/obsoleted/resources/templates/ss/: config.json  (+1 more)
openwrt_pybuilder/obsoleted/templates/: build_keepalived.py  build_ss.py
openwrt_pybuilder/resources/templates/: util.sh
openwrt_pybuilder/resources/templates/base/: build-base.sh  config.json  custom-base.sh  example.Dockerfile
openwrt_pybuilder/resources/templates/keepalived/: build-keepalived.sh  config.json
openwrt_pybuilder/resources/templates/mwan/: build-mwan.sh  config.json
openwrt_pybuilder/resources/templates/softether/: config.json
openwrt_pybuilder/resources/templates/softether5/: build-softether.sh  config.json  custom-softether.sh  env-example.list  example.Dockerfile
openwrt_pybuilder/resources/templates/ss/: build-ss.sh  config.json  example.json
openwrt_pybuilder/templates/: build_base.py  build_mwan.py  build_softether.py
tests/: hs18ss.json  test1.json  test2.json  test_config.py  test_tool.py
tools/: upload.sh
(+15 files in other folders)
